Mon Oct 11 14:03:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): set the encoding of Errno::*#message
	  as locale. [ruby-dev:42358]

Mon Oct 11 06:38:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/stringio/stringio.c (strio_set_encoding):
	  StringIO#set_encoding can get 2nd argument and optional hash
	  for API compatibility to IO. [ruby-dev:42356]

Mon Oct 11 06:11:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_set_encoding): use rb_funcall2 when the io is not
	  a T_FILE. [ruby-dev:42356]

Sun Oct 10 18:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#replace): Apply a bit of optimization.

Sun Oct 10 10:20:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_MINGW32): canonicalize as like mswin version.

Sun Oct 10 05:33:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_signal_buff_size, rb_signal_exec): moved
	  declarations from thread.c.

Sat Oct  9 16:54:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RSHIFT): quote to get rid of argument expansion
	  for autoconf 2.68.

Sat Oct  9 11:00:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_reset_event_flags, exec_event_hooks): ignore
	  hooks marked as removed.

	* thread.c (thread_exec_event_hooks): remove hooks to be removed.

	* thread.c (rb_threadptr_remove_event_hook, rb_remove_event_hook):
	  defer removing hooks if running the hooks.  [ruby-dev:42350]

Sat Oct  9 10:51:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_exec_event_hooks): suppress each event
	  hooks separately.

	* thread.c (thread_suppress_tracing): split from
	  ruby_suppress_tracing, accepting thread pointer and event mask.

Sat Oct  9 08:16:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_remove_event_hook): fix typo.

Fri Oct  8 10:52:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RBCONFIG): depends on version.h due to